Fix mobile template mobile pane toolbar overlap / floating element position in bottom left or right corners

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -34,3 +34,11 @@
     }
   }
 }
+
+.mobilePane {
+  .mb-element-featureinfo {
+    // Use available space / avoid vertical scrolling inside + outside iframe
+    height: 94%;
+    min-height: 94%;
+  }
+}
