--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_base.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_base.scss
@@ -88,6 +88,7 @@ a {
   flex-grow: 1;
   display: inline-flex;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 body.desktop-template .mobile-only {
